# gst-plugins-detection-small-object

./: README.md  pyproject.toml  requirements.txt  setup.py
dev/: gst_buffer_src.py  main.py
docs/: info.md
gst/python/: exampleTransform.py  gst_detection_overlay.py  gst_detection_small_obj.py  gst_tile_detections.py  gstblur_py.py  gstvideocrop.py
scripts/: crop-run.sh  multifile.sh  rm_gst_registry.sh  sod-run.sh
tests/: test_tf_detection.py
